Fix some aligning JC-607

--- a/apps/vanilla/src/pages/index.css
+++ b/apps/vanilla/src/pages/index.css
@@ -87,6 +87,7 @@
 .main__filters-controls {
 	display: flex;
 	flex-direction: column;
+	align-items: baseline;
 	gap: 24px;
 	padding-bottom: 24px;
 	border-bottom: 1px solid var(--border-color);
